--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <nav class="navbar fixed-top navbar-expand-lg  navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand " href="#"><img src="images/155563038-ice-cream-logo-design.jpg" alt="" srcset="" width="118px"
+      <a class="navbar-brand " href="#"><img src="images/Capture.jpg" alt="logo" srcset="" width="118px"
           height="80px" style="border-radius: 10px;"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
