--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="location.html">Locations</a>
+            <a class="nav-link" href="#foot">Locations</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Franchise.html">Franchise</a>
@@ -382,7 +382,7 @@
 
   <!-- footer -->
 
-  <div class="footer">
+  <div class="footer" id="foot">
     <div class="contact-info">
       <h3 style="text-decoration: underline;">CONTACT INFO</h3>
       <p style="margin-top: 30px;"><strong>Address : </strong>HO: 74, Empress Colony,<br>Shree Jhod Nagar, Jalandhar-
