--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact Us</a>
+            <a class="nav-link" href="#foot">Contact Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled " href="#" tabindex="-1" aria-disabled="true">
