--- a/location.html
+++ b/location.html
@@ -32,7 +32,7 @@
                         <a class="nav-link " aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="location.html">Our Center</a>
+                        <a class="nav-link active" href="location.html">Our Centers</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Franchise.html">Franchise</a>
@@ -194,7 +194,7 @@
     <div class="cards mx-3 my-3">
         <div class="card-group">
             <div class="card">
-                <img class="card-img-top" src="/images/woman-with-ice-cream-2004777_640.jpg" alt="Card image cap"
+                <img class="card-img-top" src="images/woman-with-ice-cream-2004777_640.jpg" alt="Card image cap"
                     height="260px">
                 <div class="card-body">
                     <h5 class="card-title">Omkar Treat Parlor</h5>
@@ -206,7 +206,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="/images/girl-4566623_640.jpg" alt="Card image cap" height="260px">
+                <img class="card-img-top" src="images/girl-4566623_640.jpg" alt="Card image cap" height="260px">
                 <div class="card-body">
                     <h5 class="card-title">Atharv Treat Parlor</h5>
                     <small class="card-text">
@@ -218,7 +218,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="/images/ice-1786311_640.jpg" alt="Card image cap" height="260px">
+                <img class="card-img-top" src="images/ice-1786311_640.jpg" alt="Card image cap" height="260px">
                 <div class="card-body">
                     <h5 class="card-title">Mandar Treat Parlor</h5>
                     <small class="card-text">
@@ -232,7 +232,7 @@
         </div>
         <div class="card-group">
             <div class="card">
-                <img class="card-img-top" src="/images/ice-3611722_640.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/ice-3611722_640.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Paritosh Treat Parlor</h5>
                     <small class="card-text">
@@ -244,7 +244,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="/images/apple-pie-3381728_640.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/apple-pie-3381728_640.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Swaroop Treat Parlor</h5>
                     <small class="card-text">
@@ -255,7 +255,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="/images/waffle-4608843_640.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/waffle-4608843_640.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Sagar Parlour</h5>
                     <small class="card-text">
