--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#foot">Locations</a>
+            <a class="nav-link" href="location.html">Our Center</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Franchise.html">Franchise</a>
