--- a/location.html
+++ b/location.html
@@ -190,7 +190,7 @@
     </div>
 
     <div class="cont">
-        <h3 class="my-5" style=" text-align: center; color:rebeccapurple;font-family: 'Cormorant Unicase', serif; font-weight: 700; font-size: xx-large; text-decoration: underline;">OUR LOCATIONS</h3>
+        <h3 class="my-5" style=" text-align: center; color:rebeccapurple;font-family: 'Cormorant Unicase', serif; font-weight: 700; font-size: xx-large; text-decoration: underline;">Locations we are serving pleasure at!!</h3>
     </div>
     <div class="cards mx-3 my-3">
         <div class="card-group">
