--- a/Franchise.html
+++ b/Franchise.html
@@ -191,7 +191,7 @@
 
     <div class="row">
              <div class="col-6 col-md-4">
-                <img src="image/fran1" alt="">
+                <img src="images/fran1" alt="">
              </div>
             <div class="col-12 col-md-8">.col-12 .col-md-8</div>
     </div>
