--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <span><i class="fas fa-ice-cream"></i></span>
+  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
   <title>IceCream - Mania</title>
   
 </head>
@@ -36,7 +36,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="location.html">Our Center</a>
+            <a class="nav-link" href="location.html">Our Centers</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Franchise.html">Franchise</a>
