--- a/location.html
+++ b/location.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css.css">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300&family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -32,7 +33,7 @@
                         <a class="nav-link " aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="location.html">Our Center</a>
+                        <a class="nav-link active" href="location.html">Our Centers</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Franchise.html">Franchise</a>
