--- a/location.html
+++ b/location.html
@@ -207,7 +207,7 @@
     <div class="cards mx-3 my-3">
         <div class="card-group">
             <div class="card">
-                <img class="card-img-top" src="/images/woman-with-ice-cream-2004777_640.jpg" alt="Card image cap"
+                <img class="card-img-top" src="images/woman-with-ice-cream-2004777_640.jpg" alt="Card image cap"
                     height="260px">
                 <div class="card-body">
                     <h5 class="card-title">Omkar Treat Parlor</h5>
@@ -219,7 +219,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="/images/girl-4566623_640.jpg" alt="Card image cap" height="260px">
+                <img class="card-img-top" src="images/girl-4566623_640.jpg" alt="Card image cap" height="260px">
                 <div class="card-body">
                     <h5 class="card-title">Atharv Treat Parlor</h5>
                     <small class="card-text">
@@ -231,7 +231,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="/images/ice-1786311_640.jpg" alt="Card image cap" height="260px">
+                <img class="card-img-top" src="images/ice-1786311_640.jpg" alt="Card image cap" height="260px">
                 <div class="card-body">
                     <h5 class="card-title">Mandar Treat Parlor</h5>
                     <small class="card-text">
@@ -245,7 +245,7 @@
         </div>
         <div class="card-group">
             <div class="card">
-                <img class="card-img-top" src="/images/ice-3611722_640.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/ice-3611722_640.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Paritosh Treat Parlor</h5>
                     <small class="card-text">
@@ -257,7 +257,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="/images/apple-pie-3381728_640.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/apple-pie-3381728_640.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Swaroop Treat Parlor</h5>
                     <small class="card-text">
@@ -268,7 +268,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="/images/waffle-4608843_640.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/waffle-4608843_640.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Sagar Parlour</h5>
                     <small class="card-text">
