--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
   <title>IceCream - Mania</title>
-  
+  <script src="index.js"></script>
 </head>
 
 <body>
@@ -64,11 +64,18 @@
           <li class="nav-item">
             <a class="nav-link" href="#foot">Contact Us</a>
           </li>
+          
           <li class="nav-item">
             <a class="nav-link disabled " href="#" tabindex="-1" aria-disabled="true">
               <p class="text">Login to Order</p>
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link disabled " href="#" tabindex="-1" aria-disabled="true">
+             <p class="text" id = "time"></p>
+            </a>
+          </li>
+          
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
