--- a/location.html
+++ b/location.html
@@ -8,20 +8,23 @@
     <link rel="stylesheet" href="css.css">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <!-- Bootstrap CSS -->
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300&family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300&family=UnifrakturCook:wght@700&display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
     <title>IceCream - Mania</title>
+    <script src="index.js"></script>
 </head>
 
 <body>
     <nav class="navbar fixed-top navbar-expand-lg  navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand img" href="#"><img src="images/Capture.JPG" alt="" srcset=""
-                    width="118px" height="80px" style="border-radius: 10px;"></a>
+            <a class="navbar-brand img" href="#"><img src="images/Capture.JPG" alt="" srcset="" width="118px"
+                    height="80px" style="border-radius: 10px;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -61,11 +64,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#foot">Contact Us</a>
                     </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link disabled " href="#" tabindex="-1" aria-disabled="true">
-                          <p class="text">Login to Order</p>
+                            <p class="text">Login to Order</p>
                         </a>
-                      </li>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled " href="#" tabindex="-1" aria-disabled="true">
+                            <p class="text" id="time"></p>
+                        </a>
+                    </li>
                     <!-- <li class="nav-item active">
                         <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">
                             <p style="color: green; font-size: large;"> Order-Now</p>
@@ -190,7 +199,10 @@
     </div>
 
     <div class="cont">
-        <h3 class="my-5" style=" text-align: center; color:rebeccapurple;font-family: 'Cormorant Unicase', serif; font-weight: 700; font-size: xx-large; text-decoration: underline;">OUR LOCATIONS</h3>
+        <h3 class="my-5"
+            style=" text-align: center; color:rebeccapurple;font-family: 'Cormorant Unicase', serif; font-weight: 700; font-size: xx-large; text-decoration: underline;">
+            Locations we are <strong style="color: red;">serving pleasure at!!</strong></h3>
+    </div>
     </div>
     <div class="cards mx-3 my-3">
         <div class="card-group">
@@ -268,11 +280,11 @@
             </div>
         </div>
     </div>
-    <div class="footer" id = "foot">
+    <div class="footer" id="foot">
         <div class="contact-info">
             <h3 style="text-decoration: underline;">CONTACT INFO</h3>
             <p style="margin-top: 30px;"><strong>Address : </strong>HO: 134, Empress Mill Society,<br>Shree Nagar,
-               Jalandhar-
+                Jalandhar-
                 144001. </p>
             <p> <strong>Phone Number: </strong>0712 - 2785505</p>
             <p> <strong>Email: </strong> info@Cream.in</p>
