--- a/Franchise.html
+++ b/Franchise.html
@@ -206,7 +206,7 @@
 
     <div class="Fran ">
         <h3 style="text-align: center; color: blue; font-family: 'Viaoda Libre', cursive;text-decoration: underline;">
-            FRANCHISE</h3>
+            Partner us in Delivering Pleasure of Taste😋 E</h3>
         <div class="x mx-5">
             <hr>
             <small id="fran">
