--- a/scoops.html
+++ b/scoops.html
@@ -226,7 +226,7 @@
           <div class="col-md-4 mt-2">
               <div class="card">
                   <div class="card-body">
-                      <div class="card-img-actions"> <img src="images/chocoChipScoop.jpeg" class="card-img img-fluid" width="96" height="350" alt=""> </div>
+                      <div class="card-img-actions"> <img src="images/chocochipScoop.jpeg" class="card-img img-fluid" width="96" height="350" alt=""> </div>
                   </div>
                   <div class="card-body bg-light text-center">
                       <div class="mb-2">
