--- a/scoops.html
+++ b/scoops.html
@@ -230,7 +230,7 @@
                   </div>
                   <div class="card-body bg-light text-center">
                       <div class="mb-2">
-                          <h4 class="font-weight-semibold mb-2" style="color:#D2691E";" ><b>ChocoChip IceCream </b><h6><i>Melt in mouth chocolate chips in every spoon.</i></h6>500ML</h4>
+                          <h4 class="font-weight-semibold mb-2" style="color:#D2691E";" ><b>ChocoChip IceCream </b><h6><i>Melt in mouth chocolate in every bite.</i></h6>500ML</h4>
                       </div>
                       <h3 class="mb-0 font-weight-semibold">170Rs</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
