adding animation to clock and making scoops page responsive

--- a/scoops.html
+++ b/scoops.html
@@ -15,6 +15,23 @@
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
   <title>IceCream - Mania</title>
   <script src="index.js"></script>
+
+  <style>
+    @media (max-width:800px)
+    {
+      .footers
+      {
+        margin-top:3100px;
+      }
+    }
+    @media (max-width:360px)
+    {
+      .footers
+      {
+        margin-top:1200px;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -33,7 +50,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link " aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="location.html">Our Centers</a>
@@ -43,7 +60,7 @@
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
               Products
             </a>
@@ -58,7 +75,7 @@
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="scoops.html">Scoops</a></li>
+              <li><a class="dropdown-item active" href="#">Scoops</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -200,9 +217,9 @@
                   </div>
                   <div class="card-body bg-light text-center">
                       <div class="mb-2">
-                          <h4 class="font-weight-semibold mb-2" style="color: #F4BB44;"><b>Alphonso Mango IceCream</b><h6><i>Made with Fresh Puply Alphoso Mangoes.</i></h6>500ML</h4>
+                          <h4 class="font-weight-semibold mb-2" style="color: #F4BB44;"><b>Alphonso Mango IceCream</b><h6><i>Fresh Puply Alphoso.</i></h6>500ML</h4>
                       </div>
-                      <h3 class="mb-0 font-weight-semibold">150Rs</h3>
+                      <h3 class="mb-0 font-weight-semibold">₹ 150</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
                       <div class="text-muted mb-3">98 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
@@ -215,9 +232,9 @@
                   </div>
                   <div class="card-body bg-light text-center">
                       <div class="mb-2">
-                          <h4 class="font-weight-semibold mb-2" style="color:#e75480;"><b>Strawberry IceCream </b><br><h6><i>Berry yourself.</i></h6>500ML</h4>
+                          <h4 class="font-weight-semibold mb-2" style="color:#e75480;"><b>Strawberry IceCream </b><br><h6><i>Berry yourself & taste the Real Cream</i></h6>500ML</h4>
                       </div>
-                      <h3 class="mb-0 font-weight-semibold">135Rs</h3>
+                      <h3 class="mb-0 font-weight-semibold">₹ 135</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
                       <div class="text-muted mb-3">62 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
@@ -232,7 +249,7 @@
                       <div class="mb-2">
                           <h4 class="font-weight-semibold mb-2" style="color:#D2691E";" ><b>ChocoChip IceCream </b><h6><i>Melt in mouth chocolate in every bite.</i></h6>500ML</h4>
                       </div>
-                      <h3 class="mb-0 font-weight-semibold">170Rs</h3>
+                      <h3 class="mb-0 font-weight-semibold">₹ 170</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
                       <div class="text-muted mb-3">102 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
@@ -247,7 +264,7 @@
                       <div class="mb-2">
                           <h4 class="font-weight-semibold mb-2" style="color:#414043";"><b>Black Current IceCream</b> <h6><i>Blue Bell. We eat all we can and sell the rest.</i></h6><br>500ML</h4>
                       </div>
-                      <h3 class="mb-0 font-weight-semibold">200RS</h3>
+                      <h3 class="mb-0 font-weight-semibold">₹ 200</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
                       <div class="text-muted mb-3">56 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
@@ -262,7 +279,7 @@
                       <div class="mb-2">
                           <h4 class="font-weight-semibold mb-2" style="color:#D1BEA8";"><b>Vanilla IceCream</b> <h6><i>A surprise in every lick.</i></h6><br>500ML</h4>
                       </div>
-                      <h3 class="mb-0 font-weight-semibold">105Rs</h3>
+                      <h3 class="mb-0 font-weight-semibold">₹ 105</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
                       <div class="text-muted mb-3">97 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
@@ -277,7 +294,7 @@
                       <div class="mb-2">
                         <h4 class="font-weight-semibold mb-2" style="color:#E3963E";"><b>ButterScotch IceCream</b> <h6><i>An unforgettable experience.</i></h6><br>500ML</h4>
                       </div>
-                      <h3 class="mb-0 font-weight-semibold">140RS</h3>
+                      <h3 class="mb-0 font-weight-semibold">₹ 140</h3>
                       <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
                       <div class="text-muted mb-3">115 reviews</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Add to cart</button>
                   </div>
@@ -287,7 +304,7 @@
   </div>
 
   <!-- footer -->
-
+  <div class="footers">
   <div class="footer" id="foot">
     <div class="contact-info">
       <h3 style="text-decoration: underline;">CONTACT INFO</h3>
@@ -336,7 +353,7 @@
     <hr style="  color: #f5f5f5;">
     <p class="mx-5 my-3" style="color: white; text-align: center;">© 2021 - All Rights Reserved - Mania Ice Cream</p>
   </div>
-
+</div>
 
   <!-- Optional JavaScript; choose one of the two! -->
 
