--- a/location.html
+++ b/location.html
@@ -58,7 +58,7 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Scoops</a></li>
+                            <li><a class="dropdown-item" href="scoops.html">Scoops</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
