--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-  <title>IceCream - Mania</title>
+  <title>IceCream - Giani's</title>
   <script src="index.js"></script>
 </head>
 
@@ -210,7 +210,7 @@
           <img src="images/1.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5 style="font-size:xx-large; color: aqua;">CELEBRATE </h5>
-            <p style="font-size:large; color:rgb(6, 93, 10);">Your Best Moment with MANIA</p>
+            <p style="font-size:large; color:rgb(6, 93, 10);">Your Best Moment with Giani's</p>
           </div>
         </div>
         <div class="carousel-item">
@@ -218,7 +218,7 @@
           <div class="carousel-caption d-none d-md-block">
             <h6 style="color: rgb(98, 241, 14);">If You Could Taste</h6>
             <h2>HAPPINESS</h2>
-            <p style="color: red;">it would taste like Mania-Cream</p>
+            <p style="color: red;">it would taste like Giani's-Cream</p>
           </div>
         </div>
         <div class="carousel-item">
@@ -253,7 +253,7 @@
           <img src="images/2.jpg" class="card-img-top" alt="..." style="border-radius: 50px;">
           <div class="card-body text-white bg-success">
             <h3 class="card-title" style="color: rgb(241, 238, 8); text-align: center;text-decoration: underline;">
-              Mania-Ice</h3>
+              Giani's-Ice</h3>
             <p class="card-text ">With their tangy, tantalizing and yummy taste, they are relished by young as well as
               the old. Treat an impressive range of more than 10 lip-smacking flavours.</p>
           </div>
@@ -264,7 +264,7 @@
           <img src="images/4.jpg" class="card-img-top" alt="..." style="border-radius: 50px;">
           <div class="card-body  text-white bg-dark">
             <h3 class="card-title" style="color: rgb(174, 238, 54); text-align: center;text-decoration: underline;">
-              Mania Novellety</h5>
+              Giani's Novellety</h5>
               <p class="card-text">We try to add a special touch to your happiness with our specially prepared range of
               great novelties.</p>
           </div>
@@ -274,7 +274,7 @@
         <div class="card h-100">
           <img src="images/5.jpg" class="card-img-top" alt="..." style="border-radius: 50px;">
           <div class="card-body text-dark bg-info">
-            <h3 class="card-title " style="color: rgb(9, 0, 128); text-align: center;text-decoration: underline;">Mania
+            <h3 class="card-title " style="color: rgb(9, 0, 128); text-align: center;text-decoration: underline;">Giani's
               Sundaes</h3>
             <p class="card-text">The wide ranges of sundaes are topped with tempting ripples and fresh ingredients which
               makes eating them a heavenly experience.</p>
@@ -318,7 +318,7 @@
       <div class="card">
         <img src="images/i2.jpg" class="card-img-top " alt="..." height="270px">
         <div class="card-body">
-          <h5 class="card-title ho">Mania Ice-Cream Faluda</h5>
+          <h5 class="card-title ho">Giani's Ice-Cream Faluda</h5>
 
         </div>
         <div class="card-footer">
@@ -396,7 +396,7 @@
         144011. </p>
       <p> <strong>Phone Number: </strong>071782-85505</p>
       <p> <strong>Email: </strong> info@Cream.in</p>
-      <p> <strong>Website: </strong> www.ManiaIceCream.in</p>
+      <p> <strong>Website: </strong> www.Giani'sIceCream.in</p>
     </div>
     <div class="email">
       <h3 style="text-decoration: underline;">GET IN TOUCH</h3>
@@ -435,7 +435,7 @@
 
   <div class="footer1">
     <hr style="  color: #f5f5f5;">
-    <p class="mx-5 my-3" style="color: white; text-align: center;">© 2021 - All Rights Reserved - Mania Ice Cream</p>
+    <p class="mx-5 my-3" style="color: white; text-align: center;">© 2021 - All Rights Reserved - Giani's Ice Cream</p>
   </div>
 
 
